2013-11-11  Per Bothner  <per@bothner.com>

	* LispLanguage.java (parse): No longer need to set firstForm.

2013-11-10  Per Bothner  <per@bothner.com>

	* DefineNamespace.java: Update for new APIs.
	* LispLanguage.java: Likewise.

2013-11-03  Per Bothner  <per@bothner.com>

	* LispPackage.java (findSymbol): Optimize by using new
	Values.Values2 class.

2013-10-30  Per Bothner  <per@bothner.com>

	* ReaderXmlElement.java (readElementConstructor): Allow an unquoted
	enclosed expression for the value (only) of an attribute.
	Report error if value not otherwise starts with '\'' or '"'.
	In namespace-declaration the prefix becomes a symbol, not a string.

2013-10-23  Per Bothner  <per@bothner.com>

	* LispLanguage.java (parse): Remove unused local variable 'forms'.

	* ReaderXmlElement.java (xmlProcInstSymbol): Fix typo - missing '$'.

2013-09-28  Per Bothner  <per@bothner.com>

	* ReaderDispatchMisc.java (read): Support R7RS's #true/#false.
	* LispReader.java (readSimpleVector): Split into two methods.
	(readTokenString): Utility method to reduce some duplication.

	* LispReader.java: Allow '\|' (vertical-bar), useful in symbols.

2013-09-27  Per Bothner  <per@bothner.com>

	* LispReader.java (readToken): Allow r7rs-style general escape
	inside |bars| when reading a symbol.

2013-09-22  Per Bothner  <per@bothner.com>

	* LispReader (readSpecial): Allow ' ' after '#!'.
	If lines ends with '\', skip next line as well.
	This helps with handling the scsh-style "meta-arg".
	Also ApplicationMainSupport.commandName if unset.

2013-07-05  Charles Turner  <chturne@gmail.com>

	* LispPackage.java (valueOf, valueOfNoCreate, findSymbol)
	(exportPkg, importPkg, allSymbols, allExternalSymbols)
	(allInternalSymbols, signal): New methods adding extra support for
	CL packages.

2013-09-05  Per Bothner  <per@bothner.com>

	* LangObjType.java (getConstructor): Add case for bytevector.

2013-08-31  Per Bothner  <per@bothner.com>
